# LIS-task1

./: CMakeLists.txt  Main.py  README.md  package.xml
.ipynb_checkpoints/: kNN-checkpoint.ipynb
cfg/: calibration_params_IMU_CHAMELEON.yaml  camera_settings.yaml  waypoints.yaml
data/: try_0.csv  try_1.csv
include/tethered_drone/: image_processing.hpp  trans_rot_estimator.hpp  waypoint_flyer.hpp
launch/: AIimage.launch  KF.launch  KF1.launch  matcher.launch  mav_core.launch  node_debugging.launch  recolor_kitti.launch  testing.launch  testing_bag.launch  testing_bag_lukasz.launch  vicon_base_station.launch  vicon_settings.yaml  waypoint_flyer.launch
parameters/: calibration_params_IMU_CHAMELEON.yaml
scripts/: ptgrey_tf.m
src/: attitude_estimator_node.cpp  image_processing_node.cpp  waypoint_flyer_node.cpp
