<?xml version="1.0"?>
<package format="2">
  <name>tethered_drone</name>
  <version>0.0.0</version>
  <description>
    Packages related to the tethered drone.
  </description>
  <url></url>
  <author>Alex Millane</author>
  <maintainer email="alex.millane@gmail.com">Alex Millane</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <!-- Dependencies. -->
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>glog_catkin</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>mav_msgs</depend>
  <depend>mav_coverage_planning</depend>
  <depend>geometry_msgs</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>

</package>
